[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sbtse"
authors = [
    {name = "Raphael Michel", email = "mail@raphaelmichel.de"},
]
description = "Library and tool to access Swissbit TSE"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["swissbit", "tse"]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "click==8.1.*",
    "rich==13.6.*",
    "fastapi[standard]==0.115.*",
    "python-dateutil",
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "sbtse.__version__"}

[project.scripts]
sbtse = "sbtse.main:main"
